--- a/index.html
+++ b/index.html
@@ -98,5 +98,6 @@
         </div>
 
         <script src="scripts/app.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     </body>
 </html>
